--- a/AI-edX-Training/Assignments/Assignment1/.vscode/tasks.json
+++ b/AI-edX-Training/Assignments/Assignment1/.vscode/tasks.json
@@ -4,6 +4,6 @@
     "version": "0.1.0",
     "command": "python",
     "isShellCommand": true,
-    "args": ["${file}", "bfs", "1,2,5,3,4,0,6,7,8"],
+    "args": ["${file}", "ast", "3,8,2,0,4,7,6,5,1"],
     "showOutput": "always"
 }
