--- a/AI-edX-Training/Assignments/Assignment3/.vscode/settings.json
+++ b/AI-edX-Training/Assignments/Assignment3/.vscode/settings.json
@@ -1,4 +1,13 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-    "python.linting.enabled": false
+    "python.linting.enabled": false,
+    "files.exclude": {
+            "**/__init__.py": false,
+        "**/__pycache__": true,
+        "**/.git*": true,
+        "**/*.bat":true,
+        "docs":true,
+        "assets":true,
+        "LICENSE":true
+        },
 }
